# automatic-testing

./: .coverage  README.md  pyproject.toml
automatic-testing/tests/: test_capitalize.py
automatic_testing/tests/: test_capitalize.py
tests/: test_capitalize.py
